--- a/package.json
+++ b/package.json
@@ -28,24 +28,11 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
+    "lefthook": "^1.4.6",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": ""
-    }
-  },
-  "lint-staged": {
-    "*.ts,*.tsx": [
-      "npm run lint",
-      "npm run format",
-      "git add"
-    ]
   }
 }
