--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,12 @@
 .pnp.js
 .yarn/install-state.gz
 
-# testing
-/coverage
-
 # next.js
 /.next/
 /out/
 
 # production
+/public/data
 /build
 
 # misc
