--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "10.18.0",
     "jsonwebtoken": "^9.0.2",
+    "music-metadata": "^10.6.4",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.25",
     "prettier": "3.2.4",
