--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eslint-plugin-typescript": "0.14.0",
     "file-system": "^1.2.2",
     "formidable": "^3.5.2",
-    "framer-motion": "10.18.0",
     "jsonwebtoken": "^9.0.2",
+    "motion": "^11.18.1",
     "music-metadata": "^10.6.4",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.25",
