--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "motion": "^11.18.1",
+    "multer": "^1.4.5-lts.1",
     "music-metadata": "^10.6.4",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.25",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.7",
     "@types/react": "18",
     "@types/react-dom": "18",
